added stuff, very cool
added exception handling for commands(dunno why i didnt do this sooner)
and created a reset command which will clear all stats and also inventory
also completely forgot to decorate the sidebar so i did it now huzzah

very cool

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,3 +9,7 @@ commands:
     description: a
   setblocksbroken:
     description: admin command to set blocks broken
+    aliases:
+      - sbb
+  reset:
+    description: resets your blocks broken counter and removes kit items from your inventory
